# auto_dict

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/auto_dict/: __init__.py  auto_dict.py
src/autodict/: __init__.py  autodict.py  dataclasses.py  errors.py  mapping_factory.py  namedtuple.py  options.py  predefined.py  types.py
tests/: conftest.py  test_annotate_partial_style.py  test_auto_dict.py  test_autodict.py  test_driven_style.py  test_native_support.py
